add prettier config

--- a/package.json
+++ b/package.json
@@ -12,5 +12,8 @@
     "backend"
   ],
   "author": "Talha Malik",
-  "license": "ISC"
+  "license": "ISC",
+  "devDependencies": {
+    "prettier": "^3.6.2"
+  }
 }
